--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@langchain/core": "^0.3.30",
     "@langchain/langgraph": "^0.2.40",
     "@modelcontextprotocol/sdk": "^1.1.1",
+    "dotenv": "^16.4.7",
     "zod": "^3.24.1"
   }
 }
