--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.7",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
@@ -30,6 +31,7 @@
     "@langchain/langgraph": "^0.2.40",
     "@modelcontextprotocol/sdk": "^1.1.1",
     "dotenv": "^16.4.7",
+    "mime-types": "^2.1.35",
     "zod": "^3.24.1"
   }
 }
