--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1"
   },
   "packageManager": "yarn@4.6.0"
 }
