--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@langchain/anthropic": "^0.3.11",
     "@langchain/core": "^0.3.30",
     "@langchain/langgraph": "^0.2.40",
+    "@langchain/openai": "^0.4.2",
     "@modelcontextprotocol/sdk": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
