--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
   },
