Add a bunch of bugs to master (#10)
* Capture more stream events

* Add (slightly outdated) knowledge

* Rename files

* Add the instructions for interruption handling

* Simplify system prompt

* Fix tool interruption logic

* Use Claude 3.7 Sonnet

* Update langgraph & langchain -> langgraph execution doesn't stop

* Update langgraph

* Setup (failing) tests

* Fix `CLI Initialization` tests

* Fix log after tests warning

* Fix tool tests

* Fix tests

* Merge some bugs

- Subsequent interrupts still wait too long for reconnection?
- We fail to display Agent: prompt in subsequent interruptions
- We fail to disable input while waiting for reconnection

* Add types, make Claude THINK

--- a/package.json
+++ b/package.json
@@ -16,32 +16,43 @@
     "dev:agent": "concurrently \"npm run watch\" \"nodemon --watch dist dist/cli.js\"",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
-    "dev:watch": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev:watch": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.7",
+    "babel-jest": "^29.7.0",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@langchain/anthropic": "^0.3.11",
+    "@jest/globals": "^29.7.0",
+    "@langchain/anthropic": "^0.3.15",
     "@langchain/core": "^0.3.30",
-    "@langchain/langgraph": "^0.2.40",
+    "@langchain/langgraph": "^0.2.55",
     "@langchain/openai": "^0.4.2",
     "@modelcontextprotocol/sdk": "^1.1.1",
+    "@types/jest": "^29.5.14",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mime-types": "^2.1.35",
+    "ts-jest": "^29.2.6",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
   },
