--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
-    "@langchain/anthropic": "^0.3.15",
-    "@langchain/core": "^0.3.30",
-    "@langchain/langgraph": "^0.2.55",
-    "@langchain/openai": "^0.4.2",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/core": "^0.3.55",
+    "@langchain/google-vertexai": "^0.2.9",
+    "@langchain/langgraph": "^0.2.72",
+    "@langchain/openai": "^0.5.10",
     "@modelcontextprotocol/sdk": "^1.1.1",
     "@types/jest": "^29.5.14",
     "cors": "^2.8.5",
