--- a/package.json
+++ b/package.json
@@ -36,23 +36,23 @@
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6"
   },
   "dependencies": {
-    "@jest/globals": "^29.7.0",
     "@langchain/anthropic": "^0.3.20",
     "@langchain/core": "^0.3.55",
     "@langchain/google-vertexai": "^0.2.9",
     "@langchain/langgraph": "^0.2.72",
     "@langchain/openai": "^0.5.10",
     "@modelcontextprotocol/sdk": "^1.1.1",
-    "@types/jest": "^29.5.14",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
     "mime-types": "^2.1.35",
-    "ts-jest": "^29.2.6",
     "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
