--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
   "devDependencies": {
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
+    "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.7",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "concurrently": "^9.1.2",
-    "nodemon": "^3.1.9",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3",
-    "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6"
+    "nodemon": "^3.1.9",
+    "ts-jest": "^29.2.6",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.20",
