--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "@langchain/langgraph": "^0.2.72",
     "@langchain/openai": "^0.5.10",
     "@modelcontextprotocol/sdk": "^1.1.1",
+    "@vscode/ripgrep": "^1.15.11",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "fastest-levenshtein": "^1.0.16",
     "mime-types": "^2.1.35",
     "uuid": "^11.1.0",
     "zod": "^3.24.1",
